fixes nav links on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -176,7 +176,7 @@ p {
     font-size: 40px;
   }
   .nav-links{
-    font-size: 18px;
+    font-size: 15px;
     padding: 0px;
     margin: -5px;
   }
@@ -192,7 +192,7 @@ p {
 
 @media screen and (max-width:400px) {
   .nav-links{
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .map {
@@ -203,7 +203,7 @@ p {
 
 @media screen and (max-width:360px) {
   .nav-links{
-    font-size: 16px;
+    font-size: 12px;
     margin: -10px;
     padding: -5px;
   }
